@@ -1,31 +1,91 @@
-{
-    IBClasses = (
-        {
-            ACTIONS = {
-                deleteReceiver = id; 
-                deleteSender = id; 
-                onClear = id; 
-                resumeReceiver = id; 
-                startReceiver = id; 
-                startSender = id; 
-                stopReceiver = id; 
-                stopSender = id; 
-            }; 
-            CLASS = DccManager; 
-            LANGUAGE = ObjC; 
-            OUTLETS = {
-                "clear_button" = id; 
-                "receiver_table" = id; 
-                "sender_table" = id; 
-                splitter = id; 
-                window = id; 
-            }; 
-            SUPERCLASS = NSObject; 
-        }, 
-        {CLASS = DialogWindow; LANGUAGE = ObjC; SUPERCLASS = NSWindow; }, 
-        {CLASS = FirstResponder; LANGUAGE = ObjC; SUPERCLASS = NSObject; }, 
-        {CLASS = ListView; LANGUAGE = ObjC; SUPERCLASS = NSTableView; }, 
-        {CLASS = Splitter; LANGUAGE = ObjC; SUPERCLASS = NSSplitView; }
-    ); 
-    IBVersion = 1; 
-}
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<plist version="1.0">
+<dict>
+	<key>IBClasses</key>
+	<array>
+		<dict>
+			<key>CLASS</key>
+			<string>FirstResponder</string>
+			<key>LANGUAGE</key>
+			<string>ObjC</string>
+			<key>SUPERCLASS</key>
+			<string>NSObject</string>
+		</dict>
+		<dict>
+			<key>CLASS</key>
+			<string>NSObject</string>
+			<key>LANGUAGE</key>
+			<string>ObjC</string>
+		</dict>
+		<dict>
+			<key>ACTIONS</key>
+			<dict>
+				<key>deleteReceiver</key>
+				<string>id</string>
+				<key>deleteSender</key>
+				<string>id</string>
+				<key>onClear</key>
+				<string>id</string>
+				<key>openReceiver</key>
+				<string>id</string>
+				<key>resumeReceiver</key>
+				<string>id</string>
+				<key>startReceiver</key>
+				<string>id</string>
+				<key>startSender</key>
+				<string>id</string>
+				<key>stopReceiver</key>
+				<string>id</string>
+				<key>stopSender</key>
+				<string>id</string>
+			</dict>
+			<key>CLASS</key>
+			<string>DccManager</string>
+			<key>LANGUAGE</key>
+			<string>ObjC</string>
+			<key>OUTLETS</key>
+			<dict>
+				<key>clear_button</key>
+				<string>id</string>
+				<key>receiver_table</key>
+				<string>id</string>
+				<key>sender_table</key>
+				<string>id</string>
+				<key>splitter</key>
+				<string>id</string>
+				<key>window</key>
+				<string>id</string>
+			</dict>
+			<key>SUPERCLASS</key>
+			<string>NSObject</string>
+		</dict>
+		<dict>
+			<key>CLASS</key>
+			<string>ListView</string>
+			<key>LANGUAGE</key>
+			<string>ObjC</string>
+			<key>SUPERCLASS</key>
+			<string>NSTableView</string>
+		</dict>
+		<dict>
+			<key>CLASS</key>
+			<string>Splitter</string>
+			<key>LANGUAGE</key>
+			<string>ObjC</string>
+			<key>SUPERCLASS</key>
+			<string>NSSplitView</string>
+		</dict>
+		<dict>
+			<key>CLASS</key>
+			<string>DialogWindow</string>
+			<key>LANGUAGE</key>
+			<string>ObjC</string>
+			<key>SUPERCLASS</key>
+			<string>NSWindow</string>
+		</dict>
+	</array>
+	<key>IBVersion</key>
+	<string>1</string>
+</dict>
+</plist>
